--- a/ec2_instance_full.yaml
+++ b/ec2_instance_full.yaml
@@ -1,3 +1,4 @@
+# This is an ec2 Instance which we can connect to it because we have specified the VPC and the inbound rules of it
 AWSTemplateFormatVersion: "2010-09-09" 
 Description: Creating an ec2 instance and Allowing HTTP/HTTPS and SSH inbound and outbound traffic
 
