--- a/ec2_instance_full.yaml
+++ b/ec2_instance_full.yaml
@@ -31,3 +31,9 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
+
+# Also using AWS CLI to create a stack we use this following command
+# aws cloudformation create-stack --stack-name ec2-stack --template-body file://C:\Users\sohai\OneDrive\Desktop\Templates\template.yaml 
+
+# And to update the existing stack we use this following command
+# aws cloudformation update-stack --stack-name ec2-stack --template-body file://C:\Users\sohai\OneDrive\Desktop\Templates\template.yaml 
